--- a/themes/riipen/style.css
+++ b/themes/riipen/style.css
@@ -988,16 +988,17 @@ section {
       margin: 0;
       font-weight: lighter; }
   .stats .double-border {
+    text-align: center;
     font-style: italic;
     display: block;
     position: relative;
     border: 3px solid #27aefb;
-    padding: 1rem; }
+    padding: 1.5em 1em 1em; }
     .stats .double-border:before {
       content: '';
       border: 3px solid #27aefb;
-      top: 5px;
-      left: 5px;
+      top: .6em;
+      left: .5em;
       width: 100%;
       height: 100%;
       position: absolute;
@@ -1050,7 +1051,7 @@ section {
           width: 50%; } }
 
 .figures {
-  max-width: 550px;
+  max-width: 600px;
   margin: 0 auto;
   display: -ms-flexbox;
   display: flex; }
@@ -1060,18 +1061,23 @@ section {
 
 .testimonial .container {
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center; }
 
 .testimonial .icon {
-  width: 25%; }
+  width: 12em;
+  height: 12em;
+  margin-right: 2em;
+  background-color: grey; }
 
 .testimonial .text {
   width: 75%;
-  font-size: .8rem; }
+  font-size: .8em; }
 
 .testimonial h3 {
   text-align: right;
-  font-size: .8rem;
+  font-size: .8em;
   font-style: italic; }
 
 .highlight-orange {
